fixed z-index error

--- a/src/sass/components/mainContent.scss
+++ b/src/sass/components/mainContent.scss
@@ -162,7 +162,7 @@ main {
 
                 @include respond(phone) {
                     width: 95%;
-                    height: 20%;
+                    height: 30%;
                 }
 
                 .sideBarModuleContentDivOne, .sideBarModuleContentDivTwo {
@@ -416,6 +416,7 @@ main {
 
     // Style for alert box
     .alertStyle {
+        z-index: 1001;
         box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
         background:#ff4500;
         border: none;
@@ -428,6 +429,11 @@ main {
         animation: easeIn 300ms ease-in-out 0s normal forwards;
         display: grid;
         grid-template-columns: 1fr;
+
+        @include respond(phone) {
+            top: 20rem;
+            left: 10rem;
+        }
 
         #alertOne {
             display: grid;
