--- a/src/sass/components/navbar.scss
+++ b/src/sass/components/navbar.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
 
     .module {
-        z-index: 1000;
+        z-index: 2000;
         background: #e9e9e983;
         display: none;
         place-items: center;
@@ -88,6 +88,10 @@
                         width: 7rem;
                         border-radius: 5px;
                         font-weight: 600;
+                        
+                        p {
+                            pointer-events: none;
+                        }
                     }
 
                     #addList {
@@ -95,6 +99,7 @@
                         margin: 0 1.5rem 0 3rem;
                         background: #ff4500;
                         color: #fff;
+
 
                         &:hover {
                             color: #ff4500;
